# pointfree-hse

./: .gitignore  CHANGELOG.md  README.md  pointfree-hse.cabal  pointfree-ng.cabal
src/: Exprs.hs  Names.hs  Pointfree.hs
test/: Test.hs
test/output/: dots.txt  flips.txt
