cabal-version:      2.4
name:               pointfree-ng
version:            0.1.0.0
synopsis:           A new implementation of explicit argument elimination

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Ben Millwood
maintainer:         thebenmachine+git@gmail.com

-- A copyright notice.
-- copyright:
category:           Development
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Pointfree

    -- Modules included in this library but not exported.
    other-modules:
      Exprs

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
      base ^>= 4.15.1.0,
      haskell-src-exts ^>= 1.23,
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall

test-suite pointfree-ng-test
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    build-depends:
      base ^>=4.15.1.0,
      pointfree-ng,
      haskell-src-exts ^>= 1.23
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -Wall
